--- a/css/index_new.css
+++ b/css/index_new.css
@@ -919,6 +919,7 @@ li {
     } 
 }
 
+/* meadia query for the iphones 11/iphone xr /iphone xs */
 @media only screen
   and (min-device-width: 414px)
   and (max-device-width: 414px)
@@ -1013,6 +1014,7 @@ li {
 
   }
 
+  /* meadia query for the iphones 13/13 pro*/
   @media only screen
   and (min-device-width: 430px)
   and (max-device-width: 430px)
@@ -1117,6 +1119,7 @@ li {
     } 
   }
 
+/* meadia query for the iphones */
 
   @media only screen
   and (min-device-width: 360px)
@@ -1221,3 +1224,305 @@ li {
         transition: background-color 0.3s;
     } 
   }
+
+  /* meadia query for the iphone 15 / 15 pro */
+
+  @media only screen
+    and (min-device-width: 393px)
+    and (max-device-width: 393px)
+    and (min-device-height: 852px)
+    and (max-device-height: 852px)
+    and (-webkit-device-pixel-ratio: 3) {
+        #map {
+            position: absolute;
+            top: 14vh;
+            left: 0;
+            height: 69vh;
+            width: 115.6vw;
+            z-index: 0;
+            border-radius: 10px;
+            padding: 10px;
+            margin: 10px;
+            border: 2px solid #0077DA;
+        }
+        .location-wrapper {
+            display: flex;
+            align-items: center;
+            margin-bottom: 20px;
+            margin-top: 15px;
+            margin-left: 1px;
+            margin-top: 30px;
+        }
+        .location-icon {
+            background-color: #0077DA;
+            margin-left: 30px;
+            width: 30px;
+            height: 30px;
+            cursor: pointer;
+            border-radius: 50%;
+        }
+        .Geo img {
+            position: absolute;
+            z-index: 9999;
+            top: 0;
+            color: black;
+            height: 7dvh;
+            left: 10px;
+        }
+        .card {
+            position: absolute;
+            top: 12vh;
+            left: 35%;
+            transform: translateX(-50%);
+            width: 65%;
+            max-width: 400px;
+            z-index: 1;
+            display: none;
+            background-color: rgba(255, 255, 255, 0.9);
+            border: 2px solid #0077DA;
+            border-radius: 10px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            transition: all 0.3s ease;
+            font-size: 12px;
+        }
+        .message-container {
+            position: absolute;
+            bottom: 0;
+            left: 50%;
+            bottom: 42px;
+            padding: 10px;
+            width: 100%;
+            max-width: 800px;
+        }
+       
+         /* .message-container p {
+            font-size: 10px;
+            margin-top: 139px;
+            margin-bottom: 26px;
+            margin-left: 13px; 
+        }  */
+        .btn {
+            width: 50px;
+            max-width: 95%;
+            height: 26px;
+            justify-content: right;
+            background-color: #0077DA;
+            color: white;
+            top: 10px;
+            left: 103%;
+            position: absolute;
+            font-size: 10px;
+        }
+        .toggle-label {
+            display: block;
+            position: absolute;
+            width: 220%;
+            height: 100%;
+            background-color: #0077DA;
+            color: white;
+            top: 13px;
+            left: 71vw;
+            z-index: 1;
+            border-radius: 20px;
+            font-size: 10px;
+            cursor: pointer;
+            transition: background-color 0.3s;
+        }
+    }
+
+
+/* meadia query for the iphones 11 */
+
+    @media only screen
+    and (min-device-width: 414px)
+    and (max-device-width: 414px)
+    and (min-device-height: 896px)
+    and (max-device-height: 896px)
+    and (-webkit-device-pixel-ratio: 2) {
+        #map {
+            position: absolute;
+            top: 14vh;
+            left: 0;
+            height: 67vh;
+            width: 115.6vw;
+            z-index: 0;
+            border-radius: 10px;
+            padding: 10px;
+            margin: 10px;
+            border: 2px solid #0077DA;
+        }
+        .location-wrapper {
+            display: flex;
+            align-items: center;
+            margin-bottom: 20px;
+            margin-top: 15px;
+            margin-left: 1px;
+            margin-top: 30px;
+        }
+        .location-icon {
+            background-color: #0077DA;
+            margin-left: 30px;
+            width: 30px;
+            height: 30px;
+            cursor: pointer;
+            border-radius: 50%;
+        }
+        .Geo img {
+            position: absolute;
+            z-index: 9999;
+            top: 0;
+            color: black;
+            height: 7dvh;
+            left: 10px;
+        }
+        .card {
+            position: absolute;
+            top: 12.1vh;
+            left: 35%;
+            transform: translateX(-50%);
+            width: 65%;
+            max-width: 400px;
+            z-index: 1;
+            display: none;
+            background-color: rgba(255, 255, 255, 0.9);
+            border: 2px solid #0077DA;
+            border-radius: 10px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            transition: all 0.3s ease;
+            font-size: 12px;
+        }
+        .message-container {
+            position: absolute;
+            bottom: 0;
+            left: 50%;
+            bottom: 77px;
+            padding: 10px;
+            width: 100%;
+            max-width: 800px;
+        }
+        .btn {
+            width: 50px;
+            max-width: 95%;
+            height: 26px;
+            justify-content: right;
+            background-color: #0077DA;
+            color: white;
+            top: 10px;
+            left: 103%;
+            position: absolute;
+            font-size: 10px;
+        }
+        .toggle-label {
+            display: block;
+            position: absolute;
+            width: 220%;
+            height: 100%;
+            background-color: #0077DA;
+            color: white;
+            top: 13px;
+            left: 71vw;
+            z-index: 1;
+            border-radius: 20px;
+            font-size: 10px;
+            cursor: pointer;
+            transition: background-color 0.3s;
+        }
+    }
+
+/* meadia query for iphone 11 pro */
+
+    @media only screen 
+  and (min-device-width: 375px) 
+  and (max-device-width: 375px) 
+  and (min-device-height: 812px) 
+  and (max-device-height: 812px) 
+  and (-webkit-device-pixel-ratio: 3) {
+    #map {
+        position: absolute;
+        top: 14vh;
+        left: 0;
+        height: 71vh;
+        width: 115.6vw;
+        z-index: 0;
+        border-radius: 10px;
+        padding: 10px;
+        margin: 10px;
+        border: 2px solid #0077DA;
+    }
+    .location-wrapper {
+        display: flex;
+        align-items: center;
+        margin-bottom: 20px;
+        margin-top: 15px;
+        margin-left: 1px;
+        margin-top: 30px;
+    }
+    .location-icon {
+        background-color: #0077DA;
+        margin-left: 30px;
+        width: 30px;
+        height: 30px;
+        cursor: pointer;
+        border-radius: 50%;
+    }
+    .Geo img {
+        position: absolute;
+        z-index: 9999;
+        top: 0;
+        color: black;
+        height: 7dvh;
+        left: 10px;
+    }
+    .card {
+        position: absolute;
+        top: 12.2vh;
+        left: 35%;
+        transform: translateX(-50%);
+        width: 65%;
+        max-width: 400px;
+        z-index: 1;
+        display: none;
+        background-color: rgba(255, 255, 255, 0.9);
+        border: 2px solid #0077DA;
+        border-radius: 10px;
+        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+        transition: all 0.3s ease;
+        font-size: 12px;
+    }
+    .message-container {
+        position: absolute;
+        bottom: 0;
+        left: 50%;
+        bottom: 19px;
+        padding: 10px;
+        width: 100%;
+        max-width: 800px;
+    }
+    .btn {
+        width: 50px;
+        max-width: 95%;
+        height: 26px;
+        justify-content: right;
+        background-color: #0077DA;
+        color: white;
+        top: 10px;
+        left: 103%;
+        position: absolute;
+        font-size: 10px;
+    }
+    .toggle-label {
+        display: block;
+        position: absolute;
+        width: 220%;
+        height: 100%;
+        background-color: #0077DA;
+        color: white;
+        top: 13px;
+        left: 71vw;
+        z-index: 1;
+        border-radius: 20px;
+        font-size: 10px;
+        cursor: pointer;
+        transition: background-color 0.3s;
+    }
+}
