--- a/css/style.css
+++ b/css/style.css
@@ -56,10 +56,19 @@ body {
     margin-bottom: 30px;
 }
 
+.eye-icon {
+    position: absolute;
+    right: 10px;
+    top: 35%;
+    transform: translateY(-50%);
+    cursor: pointer;
+    color: #32495e; /* Add color to match the icon color */
+}
+
 .form-control i {
     position: absolute;
-    left: 4px;
-    top: 1px;
+     /* left: 4px;
+    top: 1px; */
     color: #32495e;
 }
 
