--- a/css/profileeee.css
+++ b/css/profileeee.css
@@ -24,7 +24,7 @@ p {
   
 }
 .profile-img {
-    width:20%;
+    width:0%;
     margin-left: -284px;
     margin-top: 10px;
 }
@@ -75,7 +75,7 @@ p {
     color: darkblue;
     background-color:#E9E9F7 ;
     border: none;
-    border-radius: 10px;
+    /* border-radius: 10px; */
    
     text-align: center;
     cursor: pointer;
@@ -153,7 +153,20 @@ p {
   
 }
 
+.back-button {
+    position: fixed;
+    top: 75px;
+    left: -304px;
+    color: darkblue;
+    padding: 10px;
+    border-radius: 5px;
+    text-decoration: none;
+    font-size: 33px;
+}
 
+.back-button i {
+    margin-right: 5px; 
+}
 
 tr {
     border: 1px solid #bbb;
@@ -194,8 +207,18 @@ tr {
 }
 
 
+/* back button */
 
-
+.back-button {
+    position: fixed;
+    top: 85px;
+    left: -304px;
+    color: darkblue;
+    padding: 10px;
+    border-radius: 5px;
+    text-decoration: none;
+    font-size: 33px;
+}
 
 .pagination .page-item {
     display: inline-block;
@@ -403,12 +426,38 @@ color: rgba(var(--bs-success-rgb), var(--bs-text-opacity)) !important;
 #toggleProfileCardBtn .text {
     display: inline;
 }
+.back-button {
+    position: fixed;
+    top: 68px;
+    left: -306px;
+    color: darkblue;
+    padding: 10px;
+    border-radius: 5px;
+    text-decoration: none;
+}
+
+.back-button i {
+    margin-right: 5px; 
+}
 
 @media (min-width: 992px) {
     .table-bordered th, .table-bordered td {
         padding: 5px !important;
     }
+    .back-button {
+        position: fixed;
+        top: 35px;
+        left: -307px;
+        color: darkblue;
+        padding: 10px;
+        border-radius: 5px;
+        text-decoration: none;
+        font-size: 33px;
+    }
     
+    .back-button i {
+        margin-right: 5px; 
+    }
   
     .user {
         display: inline-block;
@@ -437,8 +486,8 @@ color: rgba(var(--bs-success-rgb), var(--bs-text-opacity)) !important;
     }
     .btn {
         font-size: 20px;
-        margin-top: 23px;
-        margin-left: 29%;
+        margin-top: 15px;
+        margin-left: 34%;
         position: fixed;
     }
     .fa-user {
@@ -497,9 +546,10 @@ color: rgba(var(--bs-success-rgb), var(--bs-text-opacity)) !important;
         /* width: 100%; */
         border-collapse: collapse;
     }
-    .fas .fa-power-off{
-        margin-top: 20px !important;
-    }
+    /* .fa-power-off{
+        margin-top: -90px;
+        margin-right: 10%;
+    } */
   
     table {
         caption-side: bottom;
@@ -533,6 +583,7 @@ color: rgba(var(--bs-success-rgb), var(--bs-text-opacity)) !important;
     .capitalize::first-letter {
         text-transform: uppercase;
     }
+   
 }
 @media (min-width: 1200px) {
     #toggleProfileCardBtn .icon {
@@ -548,10 +599,24 @@ color: rgba(var(--bs-success-rgb), var(--bs-text-opacity)) !important;
     }
     .btn {
         font-size: 20px;
-        margin-top: -6px;
+        margin-top: 10px;
         z-index: 999;
-        margin-left: 40%;
+        margin-left: 43.6%;
         position: fixed;
+    }
+    .back-button {
+        position: fixed;
+        top: 18px;
+        left: -307px;
+        color: darkblue;
+        padding: 10px;
+        border-radius: 5px;
+        text-decoration: none;
+        font-size: 33px;
+    }
+    
+    .back-button i {
+        margin-right: 5px; 
     }
 
     #uploadTable td {
@@ -604,12 +669,26 @@ color: rgba(var(--bs-success-rgb), var(--bs-text-opacity)) !important;
         text-rendering: auto;
     }
     .profile-img {
-        width: 3%;
+        width: 5%;
         position: fixed;
         top: -4%;
         margin-left: -385px;
     }
     
+    .back-button {
+        position: fixed;
+        top: 46px;
+        left: -278px;
+        padding: 10px;
+        border-radius: 5px;
+        text-decoration: none;
+        font-size: 25px;
+       
+    }
+    
+    .back-button i {
+        margin-right: 5px; 
+    }
     .card {
         width: 68%;
         height: 83%;
@@ -658,3 +737,5 @@ color: rgba(var(--bs-success-rgb), var(--bs-text-opacity)) !important;
     }
 
 }
+
+
