--- a/css/profileeee.css
+++ b/css/profileeee.css
@@ -24,9 +24,9 @@ p {
   
 }
 .profile-img {
-    width:0%;
+    width: 24%;
     margin-left: -284px;
-    margin-top: 10px;
+    margin-top: 5px;
 }
 .btn {
     font-size: 45px ;
@@ -69,7 +69,7 @@ p {
 .user {
     display: inline-block;
     margin-top: 20px;
-    margin-left: 91%;
+    margin-left: 43%;
     padding: 10px 20px;
     font-size: 18px;
     color: darkblue;
@@ -85,7 +85,12 @@ p {
 
 
 
-
+.profile-img {
+    width: 11%;
+    height: 78px;
+    position: fixed;
+    margin-left: -284px;
+}
 
 
 
@@ -479,10 +484,10 @@ color: rgba(var(--bs-success-rgb), var(--bs-text-opacity)) !important;
     }
    
     .profile-img {
-        width: 5%;
+        width: 4%;
         position: fixed;
         margin-left: -284px;
-        margin-top: 36px;
+        margin-top: 24px;
     }
     .btn {
         font-size: 20px;
