--- a/css/style.css
+++ b/css/style.css
@@ -41,15 +41,15 @@ body {
 
 .login-container1 {
     background-color: rgba(255, 255, 255, 0.8);
-    box-shadow: 0 29px 88px rgb(29, 54, 59);
-    /* margin-top: 129px; */
-    border-radius: 19px;
+    border-radius: 26px;
     position: absolute;
-    top: 51px;
-    width: 71px;
-    left: 16px;
+    top: 8px;
+    left: 17px;
 }
-.homebtn{
+
+.homebtn {
+    width: 30px; 
+    height: 30px; 
     background-color: rgba(255, 255, 255, 0.8);
     color: var(--Grey-800, #262626);
     font-family: Roboto;
@@ -57,7 +57,19 @@ body {
     font-style: normal;
     font-weight: 400;
     line-height: normal;
+    border: none;
+    cursor: pointer;
+    padding: 0;
+    border-radius: 4px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.4); 
 }
+.homebtn img {
+    width: 20px; /* Adjust size as needed */
+    height: 20px; /* Adjust size as needed */
+}  
 
 .login-form h2 {
     color: #1324bc;
@@ -87,13 +99,8 @@ body {
 
 .form-control i {
     position: absolute;
-<<<<<<< HEAD
-    left: 2px;
-    top: 1px;
-=======
      /* left: 4px;
     top: 1px; */
->>>>>>> e6f168782c469e555fc40e31c14bea72cd51f72d
     color: #32495e;
     
 }
@@ -383,6 +390,13 @@ button:hover {
             margin-left: -3px;
             width: 65%;
         }
+        .login-container1 {
+            background-color: rgba(255, 255, 255, 0.8);
+            border-radius: 26px;
+            position: absolute;
+            top: 89px;
+            left: 102px;
+        }
         .form-control input {
             width: 89%;
             max-width: 95%;
@@ -435,6 +449,13 @@ button:hover {
                 margin-left: -3px;
                 width: 49%;
             }
+            .login-container1 {
+                background-color: rgba(255, 255, 255, 0.8);
+                border-radius: 26px;
+                position: absolute;
+                top: 190px;
+                left: 230px;
+            }
 
       }
       @media screen and (min-width: 1200px) {
@@ -449,6 +470,13 @@ button:hover {
             width: 25%;
         }
         
+        .login-container1 {
+            background-color: rgba(255, 255, 255, 0.8);
+            border-radius: 26px;
+            position: absolute;
+            top: 120px;
+            left: 520px;
+        }
         .login-form h2 {
             color: #1324bc;
             text-align: center;
