--- a/css/index_new.css
+++ b/css/index_new.css
@@ -140,7 +140,7 @@ li {
     top: 1vh;
     left: 50%;
     transform: translateX(-50%);
-    width: 102%;
+    width: 99%;
     max-width: 400px;
     z-index: 1;
     display: none;
@@ -150,6 +150,27 @@ li {
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     transition: all 0.3s ease;
     font-size: 12px;
+}
+
+/* Custom popup style */
+.leaflet-popup-content-wrapper, .leaflet-popup-tip {
+    background: rgba(0, 0, 0, 0.6);
+    color: white;
+}
+
+
+.leaflet-container a.leaflet-popup-close-button {
+    position: absolute;
+    top: 0;
+    right: 0;
+    border: none;
+    text-align: center;
+    width: 24px;
+    height: 24px;
+    font: 16px / 24px Tahoma, Verdana, sans-serif;
+    color: white;
+    text-decoration: none;
+    background: transparent;
 }
 /* Toggle Switch Container */
 .toggle-switch {
@@ -244,7 +265,7 @@ li {
 @media (min-width: 320px) and (max-width: 479px) {
     #map {
         position: absolute;
-        top: 15vh;
+        top: 13vh;
         left: 0;
         height: 70vh;
         width: 93.4vw;
@@ -264,6 +285,22 @@ li {
         height: 7dvh;
     }
 
+    .card {
+        position: absolute;
+        top: 1vh;
+        left: 49%;
+        transform: translateX(-50%);
+        width: 99%;
+        max-width: 400px;
+        z-index: 1;
+        display: none;
+        background: rgba(255, 255, 255, 0.50);
+        /* border: 2px solid #0077DA; */
+        border-radius: 10px;
+        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+        transition: all 0.3s ease;
+        font-size: 12px;
+    }
     .toggle-text-left {
         position: absolute;
         z-index: 1;
@@ -305,7 +342,7 @@ li {
         background-color: #0077DA;
         color: white;
         top: 6px;
-        left: 54vw;
+        left: 60vw;
         z-index: 1;
         border-radius: 20px;
         cursor: pointer;
@@ -1377,10 +1414,10 @@ li {
     and (-webkit-device-pixel-ratio: 3) {
         #map {
             position: absolute;
-            top: 14vh;
+            top: 17vh;
             left: 0;
             height: 69vh;
-            width: 115.6vw;
+            width: 95vw;
             z-index: 0;
             border-radius: 10px;
             padding: 10px;
@@ -1413,10 +1450,10 @@ li {
         }
         .card {
             position: absolute;
-            top: 12vh;
-            left: 35%;
+            top: 16vh;
+            left: 41%;
             transform: translateX(-50%);
-            width: 65%;
+            width: 73%;
             max-width: 400px;
             z-index: 1;
             display: none;
@@ -1450,8 +1487,8 @@ li {
             justify-content: right;
             background-color: #0077DA;
             color: white;
-            top: 10px;
-            left: 103%;
+            top: 37px;
+            left: 80%;
             position: absolute;
             font-size: 10px;
         }
@@ -1463,7 +1500,7 @@ li {
             background-color: #0077DA;
             color: white;
             top: 13px;
-            left: 71vw;
+            left: 47vw;
             z-index: 1;
             border-radius: 20px;
             font-size: 10px;
